--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 *.xcuserstate
 xcuserdata/
 Carthage/Build/
+.DS_Store
+/.build
+/Packages
+/*.xcodeproj
+xcuserdata/
+DerivedData/
+.swiftpm/config/registries.json
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+.netrc
